Class names and input.css updated

--- a/src/input.css
+++ b/src/input.css
@@ -1,26 +1,22 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 body {
     @apply bg-gray-100 dark:bg-gray-900 dark:text-white;
 }
-.container-section{
+.tool-feature-section{
     @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 container mx-auto mt-10 ;
 }
 
-.common-div{
+.tool-feature-section .feature{
     @apply flex flex-col gap-2 justify-center items-center shadow-md rounded-2xl p-4 dark:bg-gray-800 ;
 }
-.description-div{
-    @apply flex flex-col gap-2 justify-center items-center;
+.tool-feature-section .description{
+    @apply flex flex-col gap-2 justify-center items-center text-center;
 }
-.headings{
+.tool-feature-section .headings{
     @apply text-xl font-semibold mb-4;
 }
-.description{
-    @apply text-center;
-}
-.figure{
+
+.tool-feature-section .figure{
     @apply flex justify-center rounded-full bg-blue-100 dark:bg-blue-900 dark:text-blue-300 text-blue-600 p-6 mb-4;
 }
